tests/build/cases/widget/not_allowed_in_when4.stderr
error: property `foo` is not allowed in when
  --> cases/widget/not_allowed_in_when4.rs:24:19
   |
24 |         when self.foo.is() { }
   |                   ^^^
